--- a/src/main/resources/templates/task/index.html
+++ b/src/main/resources/templates/task/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>CRUDforTask</title>
+	<meta charset="UTF-8">
+	<title>CRUDforTask</title>
 </head>
+
 <body>
-<h1 th:text="${title}">ようこそ</h1>
-<p th:if="${complete}" th:text="${complete}"></p>
-<form method="POST" th:action="${taskForm.isNewTask}? @{/task/insert} : @{/task/update}" th:object="${taskForm}">
-	<label>タスクタイプ（選択してください）：</label>
-	<select name="typeId">
-	<option value="1" th:selected="*{typeId == 1}">緊急</option>
-	<option value="2" th:selected="*{typeId == 2}">重要</option>
-	<option value="3" th:selected="*{typeId == 3}">できれば</option>
-	</select><br>
-	<div th:if="${#fields.hasErrors('typeId')}" th:errors="*{typeId}"></div>
+	<h1 th:text="${title}">ようこそ</h1>
+	<p th:if="${complete}" th:text="${complete}"></p>
+
+	<!-- FORM -->
+	<form method="POST" th:action="${taskForm.isNewTask}? @{/task/insert} : @{/task/update}" th:object="${taskForm}">
+		<label>タスクタイプ（選択してください）：</label>
+		<select name="typeId">
+			<option value="1" th:selected="*{typeId == 1}">緊急</option>
+			<option value="2" th:selected="*{typeId == 2}">重要</option>
+			<option value="3" th:selected="*{typeId == 3}">できれば</option>
+		</select><br>
+		<div th:if="${#fields.hasErrors('typeId')}" th:errors="*{typeId}"></div>
 	<label>やること：</label>
 	<input type="text" name="title" th:value="*{title}" /><br>
 	<div th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
@@ -27,6 +31,7 @@
 	<input  th:if="${taskId}" type="hidden" name="taskId" th:value="${taskId}">
 	<input type="submit" value="送信">
 </form>
+
 <div th:if="${taskForm.isNewTask}" style="margin:10px">
 <h3>タスク　編集削除</h3>
 <table>
